Different package of U-boot tools on distro
Change-Id: I35eda7f43e5126c73c6b355df210a13afeccf1b8
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Homepage: https://github.com/tobetter/odroid-boothelper
 
 Package: odroid-boothelper
 Architecture: any
-Depends: ${shlibs:Depens}, ${misc:Depends}, initramfs-tools, uboot-mkimage
+Depends: ${shlibs:Depens}, ${misc:Depends}, initramfs-tools, uboot-mkimage | u-boot-tools
 Description: Boot setup helper for Linux kernel
