Replace the dependency 'initramfs-tools' to 'linux-initramfs-tool'
Change-Id: I837a34c6564d7fd6ee16df3c923ddaf56eec2488
Signed-off-by: Dongjin Kim <tobetter@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -8,5 +8,5 @@ Homepage: https://github.com/tobetter/odroid-boothelper
 
 Package: odroid-boothelper
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}, initramfs-tools, uboot-mkimage | u-boot-tools
+Depends: ${shlibs:Depends}, ${misc:Depends}, linux-initramfs-tool, uboot-mkimage | u-boot-tools
 Description: Boot setup helper for Linux kernel
